Add gallery page, new tour packages, and Sri Lankan destinations - Added photo gallery with filtering and lightbox - Updated all 6 new Sri Lankan tour packages - Fixed navigation links - Added new destination images - Improved page header centering

--- a/about.html
+++ b/about.html
@@ -41,11 +41,9 @@
             
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link">HOME</a>
-                <a href="about.html" class="nav-link active">ABOUT US</a>
                 <a href="destinations.html" class="nav-link">DESTINATIONS</a>
-                <a href="#" class="nav-link">TOURS</a>
-                <a href="#" class="nav-link">PAGES</a>
-                <a href="#" class="nav-link">BLOG</a>
+                <a href="gallery.html" class="nav-link">GALLERY</a>
+                <a href="about.html" class="nav-link active">ABOUT US</a>
             </nav>
 
             <div class="nav-right">
@@ -70,7 +68,6 @@
                 <span>About Us</span>
             </div>
         </div>
-        <div class="page-header-divider"></div>
     </section>
 
     <!-- About Section -->
@@ -103,27 +100,27 @@
 
                 <div class="about-stats">
                     <div class="about-stat">
-                        <h3 class="stat-number">8+</h3>
-                        <p class="stat-label">Years of Excellence</p>
+                        <h3 class="stat-number">11</h3>
+                        <p class="stat-label">Years Experiences</p>
                     </div>
                     <div class="about-stat">
-                        <h3 class="stat-number">350+</h3>
-                        <p class="stat-label">Tour Destinations</p>
+                        <h3 class="stat-number">291</h3>
+                        <p class="stat-label">Tour Packages</p>
                     </div>
                     <div class="about-stat">
-                        <h3 class="stat-number">5000+</h3>
-                        <p class="stat-label">Happy Travelers</p>
+                        <h3 class="stat-number">467</h3>
+                        <p class="stat-label">Happy Customers</p>
                     </div>
                     <div class="about-stat">
-                        <h3 class="stat-number">98%</h3>
-                        <p class="stat-label">Satisfaction Rate</p>
+                        <h3 class="stat-number">176</h3>
+                        <p class="stat-label">Award Winning</p>
                     </div>
                 </div>
             </div>
 
             <div class="about-image">
                 <div class="about-image-wrapper">
-                    <img src="images/AB1.svg" alt="Travelers with backpacks">
+                    <img src="images/AB.png" alt="Travelers with backpacks">
                     <div class="floating-icon floating-icon-1">
                         <i class="fas fa-mountain"></i>
                     </div>
@@ -215,8 +212,8 @@
                     <div class="plane-icon plane-icon-3">
                         <i class="fas fa-plane"></i>
                     </div>
-                    <img src="https://images.unsplash.com/photo-1613395877344-13d4a8e0d49e?w=600&h=800&fit=crop" alt="Santorini Greece" class="main-image">
-                    <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=400&h=500&fit=crop" alt="Beach Hammock" class="secondary-image">
+                    <img src="images/AS2.png" alt="Santorini Greece" class="main-image">
+                    <img src="images/AS3.png" alt="Beach Hammock" class="secondary-image">
                 </div>
             </div>
 
