--- a/destination-detail.html
+++ b/destination-detail.html
@@ -41,11 +41,9 @@
             
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link">HOME</a>
-                <a href="about.html" class="nav-link">ABOUT US</a>
                 <a href="destinations.html" class="nav-link">DESTINATIONS</a>
-                <a href="#" class="nav-link" style="display: none;">TOURS</a>
-                <a href="#" class="nav-link" style="display: none;">PAGES</a>
-                <a href="#" class="nav-link" style="display: none;">BLOG</a>
+                <a href="gallery.html" class="nav-link">GALLERY</a>
+                <a href="about.html" class="nav-link">ABOUT US</a>
             </nav>
 
             <div class="nav-right">
