--- a/destinations.html
+++ b/destinations.html
@@ -41,11 +41,9 @@
             
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link">HOME</a>
-                <a href="about.html" class="nav-link">ABOUT US</a>
                 <a href="destinations.html" class="nav-link active">DESTINATIONS</a>
-                <a href="#" class="nav-link" style="display: none;">TOURS</a>
-                <a href="#" class="nav-link" style="display: none;">PAGES</a>
-                <a href="#" class="nav-link" style="display: none;">BLOG</a>
+                <a href="gallery.html" class="nav-link">GALLERY</a>
+                <a href="about.html" class="nav-link">ABOUT US</a>
             </nav>
 
             <div class="nav-right">
@@ -124,7 +122,7 @@
 
             <!-- Results Count -->
             <div class="results-info">
-                <p>Showing <span id="resultCount">6</span> destinations</p>
+                <p>Showing <span id="resultCount">9</span> destinations</p>
             </div>
 
             <!-- Destinations Grid -->
@@ -169,81 +167,83 @@
                     </div>
                 </a>
 
-                <!-- Destination Card 1 -->
-                <a href="destination-detail.html?id=caspian-valley" class="destination-card" data-category="asia" data-name="Caspian Valley" data-tours="24">
+                <!-- Destination Card - Grand Sri Lanka Tour -->
+                <a href="destination-detail.html?id=grand-sri-lanka" class="destination-card" data-category="asia" data-name="Grand Sri Lanka Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1541696443271-cd4137c4d921?w=600&h=400&fit=crop" alt="Caspian Valley">
+                        <img src="https://images.unsplash.com/photo-1552465011-b4e21bf6e79a?w=600&h=400&fit=crop" alt="Grand Sri Lanka Tour">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
-                        <span class="destination-region">Asia</span>
-                        <h3 class="destination-name">Caspian Valley</h3>
-                        <span class="destination-tours">24 Tours</span>
+                        <span class="destination-region">Sri Lanka</span>
+                        <h3 class="destination-name">Grand Sri Lanka Tour</h3>
+                        <span class="destination-tours">10 Days / 9 Nights</span>
                     </div>
                 </a>
 
-                <!-- Destination Card 2 -->
-                <a href="destination-detail.html?id=japan" class="destination-card" data-category="asia" data-name="Japan" data-tours="21">
+                <!-- Destination Card - Honeymoon Tour Package -->
+                <a href="destination-detail.html?id=honeymoon-sri-lanka" class="destination-card" data-category="asia" data-name="Honeymoon Tour Package" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1493976040374-85c8e12f0c0e?w=600&h=400&fit=crop" alt="Japan">
+                        <img src="https://images.unsplash.com/photo-1519904981063-b0cf448d479e?w=600&h=400&fit=crop" alt="Honeymoon Sri Lanka">
                         <div class="destination-overlay"></div>
+                        <span class="featured-badge">💕 Romantic</span>
                     </div>
                     <div class="destination-content">
-                        <span class="destination-region">Tokyo</span>
-                        <h3 class="destination-name">Japan</h3>
-                        <span class="destination-tours">21 Tours</span>
+                        <span class="destination-region">Sri Lanka</span>
+                        <h3 class="destination-name">Honeymoon Tour Package</h3>
+                        <span class="destination-tours">4 Days / 3 Nights</span>
                     </div>
                 </a>
 
-                <!-- Destination Card 3 -->
-                <a href="destination-detail.html?id=russia" class="destination-card" data-category="europe" data-name="Russia" data-tours="15">
+                <!-- Destination Card - Ultimate Sri Lanka Grand Tour -->
+                <a href="destination-detail.html?id=ultimate-sri-lanka" class="destination-card" data-category="asia" data-name="Ultimate Sri Lanka Grand Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1547448415-e9f5b28e570d?w=600&h=400&fit=crop" alt="Russia">
+                        <img src="https://images.unsplash.com/photo-1570077188670-e3a8d69ac5ff?w=600&h=400&fit=crop" alt="Ultimate Sri Lanka">
                         <div class="destination-overlay"></div>
+                        <span class="featured-badge">⭐ Best Value</span>
                     </div>
                     <div class="destination-content">
-                        <span class="destination-region">Moscow</span>
-                        <h3 class="destination-name">Russia</h3>
-                        <span class="destination-tours">15 Tours</span>
+                        <span class="destination-region">Sri Lanka</span>
+                        <h3 class="destination-name">Ultimate Sri Lanka Grand Tour</h3>
+                        <span class="destination-tours">14 Days / 13 Nights</span>
                     </div>
                 </a>
 
-                <!-- Destination Card 4 -->
-                <a href="destination-detail.html?id=thailand" class="destination-card" data-category="asia" data-name="Thailand" data-tours="24">
+                <!-- Destination Card - Beach Vacation Tour -->
+                <a href="destination-detail.html?id=beach-vacation-sri-lanka" class="destination-card" data-category="asia" data-name="Beach Vacation Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1552465011-b4e21bf6e79a?w=600&h=400&fit=crop" alt="Thailand">
+                        <img src="https://images.unsplash.com/photo-1559827260-dc66d52bef19?w=600&h=400&fit=crop" alt="Sri Lanka Beaches">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
-                        <span class="destination-region">Bangkok</span>
-                        <h3 class="destination-name">Thailand</h3>
-                        <span class="destination-tours">24 Tours</span>
+                        <span class="destination-region">Sri Lanka</span>
+                        <h3 class="destination-name">Beach Vacation Tour</h3>
+                        <span class="destination-tours">5 Days / 4 Nights</span>
                     </div>
                 </a>
 
-                <!-- Destination Card 5 -->
-                <a href="destination-detail.html?id=america" class="destination-card" data-category="america" data-name="America" data-tours="32">
+                <!-- Destination Card - Hill Country Escape -->
+                <a href="destination-detail.html?id=hill-country-escape" class="destination-card" data-category="asia" data-name="Hill Country Escape" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1505118380757-91f5f5632de0?w=600&h=400&fit=crop" alt="America">
+                        <img src="https://images.unsplash.com/photo-1577717903315-1691ae25ab3f?w=600&h=400&fit=crop" alt="Sri Lanka Hill Country">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
-                        <span class="destination-region">Florida</span>
-                        <h3 class="destination-name">America</h3>
-                        <span class="destination-tours">32 Tours</span>
+                        <span class="destination-region">Sri Lanka</span>
+                        <h3 class="destination-name">Hill Country Escape</h3>
+                        <span class="destination-tours">5 Days / 4 Nights</span>
                     </div>
                 </a>
 
-                <!-- Destination Card 6 -->
-                <a href="destination-detail.html?id=indonesia" class="destination-card" data-category="asia" data-name="Indonesia" data-tours="18">
+                <!-- Destination Card - Sri Lanka Highlights Tour -->
+                <a href="destination-detail.html?id=highlights-tour-sri-lanka" class="destination-card" data-category="asia" data-name="Sri Lanka Highlights Tour" data-tours="1">
                     <div class="destination-image">
-                        <img src="https://images.unsplash.com/photo-1537996194471-e657df975ab4?w=600&h=400&fit=crop" alt="Indonesia">
+                        <img src="https://images.unsplash.com/photo-1588442686675-d8c3d14f27e6?w=600&h=400&fit=crop" alt="Sri Lanka Highlights">
                         <div class="destination-overlay"></div>
                     </div>
                     <div class="destination-content">
-                        <span class="destination-region">Bali</span>
-                        <h3 class="destination-name">Indonesia</h3>
-                        <span class="destination-tours">18 Tours</span>
+                        <span class="destination-region">Sri Lanka</span>
+                        <h3 class="destination-name">Sri Lanka Highlights Tour</h3>
+                        <span class="destination-tours">7 Days / 6 Nights</span>
                     </div>
                 </a>
 
