--- a/index.html
+++ b/index.html
@@ -44,20 +44,15 @@
             
             <nav class="nav-menu">
                 <a href="index.html" class="nav-link">HOME</a>
-                <a href="about.html" class="nav-link">ABOUT US</a>
                 <a href="destinations.html" class="nav-link">DESTINATIONS</a>
-                <a href="#" class="nav-link" style="display: none;">TOURS</a>
-                <a href="#" class="nav-link" style="display: none;">PAGES</a>
-                <a href="#" class="nav-link" style="display: none;">BLOG</a>
+                <a href="gallery.html" class="nav-link">GALLERY</a>
+                <a href="about.html" class="nav-link">ABOUT US</a>
             </nav>
 
             <div class="nav-right">
                 <button class="search-btn"><i class="fas fa-search"></i></button>
                 <a href="#" class="login-btn"><i class="fas fa-user"></i> LOGIN/REGISTER</a>
                 <a href="#" class="book-now-btn">BOOK NOW</a>
-                <button class="menu-toggle" id="menuToggle">
-                    <i class="fas fa-bars"></i>
-                </button>
             </div>
         </div>
     </header>
@@ -185,48 +180,48 @@
             </div>
 
             <div class="top-destinations-grid">
-                <!-- Large Featured Card - Caspian Valley -->
+                <!-- Large Featured Card - Sigiriya -->
                 <div class="top-dest-card large-featured">
-                    <img src="https://images.unsplash.com/photo-1552465011-b4e21bf6e79a?w=800&h=600&fit=crop" alt="Caspian Valley">
+                    <img src="images/sigiriya.png" alt="Sigiriya">
                     <div class="top-dest-overlay"></div>
                     <div class="top-dest-content">
-                        <p class="top-dest-country">Italy</p>
-                        <h3 class="top-dest-name">Caspian Valley</h3>
+                        <p class="top-dest-country">Sri Lanka</p>
+                        <h3 class="top-dest-name">Sigiriya</h3>
                     </div>
                     <span class="top-dest-badge">18 Tours</span>
                 </div>
 
                 <!-- Small Cards Grid -->
                 <div class="small-cards-grid">
-                    <!-- Russia Card -->
+                    <!-- Ella Card -->
                     <div class="top-dest-card small">
-                        <img src="https://images.unsplash.com/photo-1547448415-e9f5b28e570d?w=600&h=400&fit=crop" alt="Russia">
+                        <img src="images/ella.png" alt="Ella">
                         <div class="top-dest-overlay"></div>
                         <div class="top-dest-content">
-                            <p class="top-dest-country">Moscow</p>
-                            <h3 class="top-dest-name">Russia</h3>
+                            <p class="top-dest-country">Sri Lanka</p>
+                            <h3 class="top-dest-name">Ella</h3>
                         </div>
                         <span class="top-dest-badge">15 Tours</span>
                     </div>
 
-                    <!-- America Card -->
+                    <!-- Galle Card -->
                     <div class="top-dest-card small">
-                        <img src="https://images.unsplash.com/photo-1609137144813-7d9921338f24?w=600&h=400&fit=crop" alt="America">
+                        <img src="images/galle.png" alt="Galle">
                         <div class="top-dest-overlay"></div>
                         <div class="top-dest-content">
-                            <p class="top-dest-country">Florida</p>
-                            <h3 class="top-dest-name">America</h3>
+                            <p class="top-dest-country">Sri Lanka</p>
+                            <h3 class="top-dest-name">Galle</h3>
                         </div>
                         <span class="top-dest-badge">32 Tours</span>
                     </div>
 
-                    <!-- London Card (Tall) -->
+                    <!-- Kandy Card (Tall) -->
                     <div class="top-dest-card tall">
-                        <img src="https://images.unsplash.com/photo-1513635269975-59663e0ac1ad?w=600&h=800&fit=crop" alt="London">
+                        <img src="images/kandy.png" alt="Kandy">
                         <div class="top-dest-overlay"></div>
                         <div class="top-dest-content">
-                            <p class="top-dest-country">England</p>
-                            <h3 class="top-dest-name">London</h3>
+                            <p class="top-dest-country">Sri Lanka</p>
+                            <h3 class="top-dest-name">Kandy</h3>
                         </div>
                         <span class="top-dest-badge">15 Tours</span>
                     </div>
@@ -254,87 +249,129 @@
 
             <div class="packages-slider-wrapper">
                 <div class="packages-slider">
-                    <!-- Package Card 1 -->
+                    <!-- Package Card 1 - Sri Lanka Explorer Tour -->
+                    <div class="package-card">
+                        <div class="package-image" style="background-image: url('images/SriLankaExplorer.png');">
+                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 4 Days Tour</span>
+                        </div>
+                        <div class="package-content">
+                            <p class="package-location">Sri Lanka</p>
+                            <h3 class="package-name">Sri Lanka Explorer Tour</h3>
+                            <div class="package-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span>(45)</span>
+                            </div>
+                            <p class="package-text">Experience the best of Sri Lanka in 4 days - ancient temples, scenic hills, and vibrant culture</p>
+                            <div class="package-price">$350.00 <span>| Per person</span></div>
+                        </div>
+                    </div>
+
+                    <!-- Package Card 2 - Classic Sri Lanka Tour -->
+                    <div class="package-card">
+                        <div class="package-image" style="background-image: url('images/ClassicSriLanka.png');">
+                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 6 Days Tour</span>
+                        </div>
+                        <div class="package-content">
+                            <p class="package-location">Sri Lanka</p>
+                            <h3 class="package-name">Classic Sri Lanka Tour</h3>
+                            <div class="package-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span>(62)</span>
+                            </div>
+                            <p class="package-text">Discover Sigiriya Rock, Kandy Temple, tea plantations, and stunning beaches in 6 magical days</p>
+                            <div class="package-price">$520.00 <span>| Per person</span></div>
+                        </div>
+                    </div>
+
+                    <!-- Package Card 3 - Honeymoon Escape -->
+                    <div class="package-card">
+                        <div class="package-image" style="background-image: url('images/HoneymoonEscape.png');">
+                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 4 Days Tour</span>
+                        </div>
+                        <div class="package-content">
+                            <p class="package-location">Sri Lanka</p>
+                            <h3 class="package-name">Honeymoon Escape Sri Lanka</h3>
+                            <div class="package-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span>(38)</span>
+                            </div>
+                            <p class="package-text">A romantic 4-day getaway with luxury stays, scenic train rides, and pristine beaches</p>
+                            <div class="package-price">$680.00 <span>| Per person</span></div>
+                        </div>
+                    </div>
+
+                    <!-- Package Card 4 - Sri Lanka Highlights Tour -->
+                    <div class="package-card">
+                        <div class="package-image" style="background-image: url('images/SriLankaHighlights.png');">
+                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 7 Days Tour</span>
+                        </div>
+                        <div class="package-content">
+                            <p class="package-location">Sri Lanka</p>
+                            <h3 class="package-name">Sri Lanka Highlights Tour</h3>
+                            <div class="package-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span>(55)</span>
+                            </div>
+                            <p class="package-text">Explore ancient ruins, wildlife safaris, hill country tea estates, and colonial architecture</p>
+                            <div class="package-price">$590.00 <span>| Per person</span></div>
+                        </div>
+                    </div>
+
+                    <!-- Package Card 5 - Grand Sri Lanka Tour -->
+                    <div class="package-card">
+                        <div class="package-image" style="background-image: url('https://images.unsplash.com/photo-1552465011-b4e21bf6e79a?w=600&h=400&fit=crop');">
+                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 10 Days Tour</span>
+                        </div>
+                        <div class="package-content">
+                            <p class="package-location">Sri Lanka</p>
+                            <h3 class="package-name">Grand Sri Lanka Tour</h3>
+                            <div class="package-rating">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <span>(71)</span>
+                            </div>
+                            <p class="package-text">Comprehensive 10-day journey covering all major attractions from north to south coast</p>
+                            <div class="package-price">$850.00 <span>| Per person</span></div>
+                        </div>
+                    </div>
+
+                    <!-- Package Card 6 - Ultimate Sri Lanka Tour -->
                     <div class="package-card">
                         <div class="package-image" style="background-image: url('https://images.unsplash.com/photo-1570077188670-e3a8d69ac5ff?w=600&h=400&fit=crop');">
-                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 5 Days Tours</span>
+                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 14 Days Tour</span>
                         </div>
                         <div class="package-content">
-                            <p class="package-location">Greece</p>
-                            <h3 class="package-name">Santorini, Oia</h3>
+                            <p class="package-location">Sri Lanka</p>
+                            <h3 class="package-name">Ultimate Sri Lanka Tour</h3>
                             <div class="package-rating">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
-                                <span>(38)</span>
+                                <span>(89)</span>
                             </div>
-                            <p class="package-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-                            <div class="package-price">$180.00 <span>| Per person</span></div>
-                        </div>
-                    </div>
-
-                    <!-- Package Card 2 -->
-                    <div class="package-card">
-                        <div class="package-image" style="background-image: url('https://images.unsplash.com/photo-1533105079780-92b9be482077?w=600&h=400&fit=crop');">
-                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 9 Days Tours</span>
-                        </div>
-                        <div class="package-content">
-                            <p class="package-location">Croatia</p>
-                            <h3 class="package-name">Piazza Castello</h3>
-                            <div class="package-rating">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <span>(12)</span>
-                            </div>
-                            <p class="package-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-                            <div class="package-price">$170.00 <span>| Per person</span></div>
-                        </div>
-                    </div>
-
-                    <!-- Package Card 3 -->
-                    <div class="package-card">
-                        <div class="package-image" style="background-image: url('https://images.unsplash.com/photo-1613395877344-13d4a8e0d49e?w=600&h=400&fit=crop');">
-                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 9 Days Tours</span>
-                        </div>
-                        <div class="package-content">
-                            <p class="package-location">Greece</p>
-                            <h3 class="package-name">Santorini, Oia</h3>
-                            <div class="package-rating">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <span>(38)</span>
-                            </div>
-                            <p class="package-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-                            <div class="package-price">$180.00 <span>| Per person</span></div>
-                        </div>
-                    </div>
-
-                    <!-- Package Card 4 -->
-                    <div class="package-card">
-                        <div class="package-image" style="background-image: url('https://images.unsplash.com/photo-1523531294919-4bcd7c65e216?w=600&h=400&fit=crop');">
-                            <span class="package-duration"><i class="fas fa-calendar-alt"></i> 8 Days Tours</span>
-                        </div>
-                        <div class="package-content">
-                            <p class="package-location">Maldives</p>
-                            <h3 class="package-name">Hurawalhi Island</h3>
-                            <div class="package-rating">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <span>(18)</span>
-                            </div>
-                            <p class="package-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum</p>
-                            <div class="package-price">$260.00 <span>| Per person</span></div>
+                            <p class="package-text">The complete Sri Lankan experience - culture, nature, wildlife, beaches, and adventure activities</p>
+                            <div class="package-price">$1,150.00 <span>| Per person</span></div>
                         </div>
                     </div>
                 </div>
@@ -380,7 +417,7 @@
     </section>
 
     <!-- Last Minute Deals Section -->
-    <section class="deals-section">
+    <section class="deals-section" style="display: none;">
         <div class="deals-container">
             <div class="deals-header">
                 <p class="deals-label">Top Deals</p>
