Update hero slider images from SVG to JPG format

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- Hero Section / Slider -->
     <section class="hero-section">
         <div class="hero-slider">
-            <div class="hero-slide active" style="background-image: url('images/home1.svg');">
+            <div class="hero-slide active" style="background-image: url('images/home1.jpg');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
@@ -73,7 +73,7 @@
                 </div>
             </div>
 
-            <div class="hero-slide" style="background-image: url('images/home2.svg');">
+            <div class="hero-slide" style="background-image: url('images/home2.jpg');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
 
-            <div class="hero-slide" style="background-image: url('images/home3.svg');">
+            <div class="hero-slide" style="background-image: url('images/home3.jpg');">
                 <div class="hero-overlay"></div>
                 <div class="hero-content">
                     <p class="hero-welcome-sinhala">ආයුබෝවන්</p>
@@ -250,7 +250,7 @@
             <div class="packages-slider-wrapper">
                 <div class="packages-slider">
                     <!-- Package Card 1 - Sri Lanka Explorer Tour -->
-                    <div class="package-card">
+                    <a href="destination-detail.html?id=sri-lanka-explorer" class="package-card" style="text-decoration: none; color: inherit;">
                         <div class="package-image" style="background-image: url('images/SriLankaExplorer.png');">
                             <span class="package-duration"><i class="fas fa-calendar-alt"></i> 4 Days Tour</span>
                         </div>
@@ -268,10 +268,10 @@
                             <p class="package-text">Experience the best of Sri Lanka in 4 days - ancient temples, scenic hills, and vibrant culture</p>
                             <div class="package-price">$350.00 <span>| Per person</span></div>
                         </div>
-                    </div>
+                    </a>
 
                     <!-- Package Card 2 - Classic Sri Lanka Tour -->
-                    <div class="package-card">
+                    <a href="destination-detail.html?id=classic-sri-lanka" class="package-card" style="text-decoration: none; color: inherit;">
                         <div class="package-image" style="background-image: url('images/ClassicSriLanka.png');">
                             <span class="package-duration"><i class="fas fa-calendar-alt"></i> 6 Days Tour</span>
                         </div>
@@ -289,10 +289,10 @@
                             <p class="package-text">Discover Sigiriya Rock, Kandy Temple, tea plantations, and stunning beaches in 6 magical days</p>
                             <div class="package-price">$520.00 <span>| Per person</span></div>
                         </div>
-                    </div>
+                    </a>
 
                     <!-- Package Card 3 - Honeymoon Escape -->
-                    <div class="package-card">
+                    <a href="destination-detail.html?id=honeymoon-sri-lanka" class="package-card" style="text-decoration: none; color: inherit;">
                         <div class="package-image" style="background-image: url('images/HoneymoonEscape.png');">
                             <span class="package-duration"><i class="fas fa-calendar-alt"></i> 4 Days Tour</span>
                         </div>
@@ -310,10 +310,10 @@
                             <p class="package-text">A romantic 4-day getaway with luxury stays, scenic train rides, and pristine beaches</p>
                             <div class="package-price">$680.00 <span>| Per person</span></div>
                         </div>
-                    </div>
+                    </a>
 
                     <!-- Package Card 4 - Sri Lanka Highlights Tour -->
-                    <div class="package-card">
+                    <a href="destination-detail.html?id=highlights-tour-sri-lanka" class="package-card" style="text-decoration: none; color: inherit;">
                         <div class="package-image" style="background-image: url('images/SriLankaHighlights.png');">
                             <span class="package-duration"><i class="fas fa-calendar-alt"></i> 7 Days Tour</span>
                         </div>
@@ -331,10 +331,10 @@
                             <p class="package-text">Explore ancient ruins, wildlife safaris, hill country tea estates, and colonial architecture</p>
                             <div class="package-price">$590.00 <span>| Per person</span></div>
                         </div>
-                    </div>
+                    </a>
 
                     <!-- Package Card 5 - Grand Sri Lanka Tour -->
-                    <div class="package-card">
+                    <a href="destination-detail.html?id=grand-sri-lanka" class="package-card" style="text-decoration: none; color: inherit;">
                         <div class="package-image" style="background-image: url('https://images.unsplash.com/photo-1552465011-b4e21bf6e79a?w=600&h=400&fit=crop');">
                             <span class="package-duration"><i class="fas fa-calendar-alt"></i> 10 Days Tour</span>
                         </div>
@@ -352,10 +352,10 @@
                             <p class="package-text">Comprehensive 10-day journey covering all major attractions from north to south coast</p>
                             <div class="package-price">$850.00 <span>| Per person</span></div>
                         </div>
-                    </div>
+                    </a>
 
                     <!-- Package Card 6 - Ultimate Sri Lanka Tour -->
-                    <div class="package-card">
+                    <a href="destination-detail.html?id=ultimate-sri-lanka" class="package-card" style="text-decoration: none; color: inherit;">
                         <div class="package-image" style="background-image: url('https://images.unsplash.com/photo-1570077188670-e3a8d69ac5ff?w=600&h=400&fit=crop');">
                             <span class="package-duration"><i class="fas fa-calendar-alt"></i> 14 Days Tour</span>
                         </div>
@@ -373,7 +373,7 @@
                             <p class="package-text">The complete Sri Lankan experience - culture, nature, wildlife, beaches, and adventure activities</p>
                             <div class="package-price">$1,150.00 <span>| Per person</span></div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
 
